Fix cut off issue on list titles

--- a/shared/oae/css/oae.components.css
+++ b/shared/oae/css/oae.components.css
@@ -1176,7 +1176,7 @@ ul.oae-list:not(.oae-list-grid) .oae-list-actions ul > li {
 .oae-list-options .oae-list-options-toggle h2 {
     margin: 0;
     font-size: 20px;
-    line-height: 1;
+    line-height: 1.2;
 }
 
 .oae-list-options .oae-list-options-toggle h2 .badge {
